Closed
Bug 1497524
Opened 7 years ago
Closed 7 years ago
Tapping on the text of ::after content with :active::before doesn't trigger click event
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla65
People
(Reporter: edgar, Assigned: emilio)
References
Details
Attachments
(2 files)
|
332 bytes,
text/html
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta-
|
Details | Review |
This is filed as a follow-up of bug 1473108.
We should consider the case that the tap happens on the text of ::after or ::before, will attach a test soon.
| Reporter | ||
Updated•7 years ago
|
Priority: -- → P2
| Reporter | ||
Comment 1•7 years ago
|
||
| Reporter | ||
Comment 2•7 years ago
|
||
(In reply to Edgar Chen [:edgar] from comment #1)
> Created attachment 9015539 [details]
> test.html
(Note this is only reproducible on Fennec)
Comment 3•7 years ago
|
||
Bug 1089326 might fix this.
Comment 4•7 years ago
|
||
(Just fixing last couple of tests for that)
| Reporter | ||
Comment 5•7 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #3)
> Bug 1089326 might fix this.
I could not reproduce on Fennec anymore after applying the latest patch in bug 1089326.
| Assignee | ||
Comment 7•7 years ago
|
||
I just wrote a fix for this while investigating bug 1501774, hopefully you don't mind Edgar :)
We can wait for the button fix instead, though the test should probably be landed regardless.
Assignee: echen → emilio
| Assignee | ||
Comment 8•7 years ago
|
||
We can wait for the button fix if you want, but it was easy enough to fix, I
think.
I think we could merge NativeAnonymousContentRemoved with the walk that
NotifyFrameRemoved does, since the content should still be in the tree when that
happens. If you want, I can do that as a followup.
Pushed by emilio@crisal.io:
https://hg.mozilla.org/integration/autoland/rev/3f3db4de7859
Properly dispatch events when the NAC event target is not the root, and it gets reframed. r=smaug
Comment 10•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox65:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
Comment 11•7 years ago
|
||
Do we need to backport this to Beta or can it ride the trains?
Flags: needinfo?(emilio)
Flags: in-testsuite+
| Assignee | ||
Comment 12•7 years ago
|
||
Comment on attachment 9022459 [details]
Bug 1497524 - Properly dispatch events when the NAC event target is not the root, and it gets reframed.
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: None
User impact if declined: Some click events and such won't get dispatched if you click on generated content.
Is this code covered by automated tests?: Yes
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: No
If yes, steps to reproduce: (I don't think manual testing is needed, but testing the STR of bug 1501774 or so would work in case someone else decides it is)
List of other uplifts needed: None
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): Minor fixup to the patch from bug 1473108.
String changes made/needed: none
Flags: needinfo?(emilio)
Attachment #9022459 -
Flags: approval-mozilla-beta?
| Assignee | ||
Comment 13•7 years ago
|
||
I think it can ride the trains, but given it's early in the cycle it may be worth to land it on beta so it rides the trains together with bug 1473108.
Comment 14•7 years ago
|
||
Comment on attachment 9022459 [details]
Bug 1497524 - Properly dispatch events when the NAC event target is not the root, and it gets reframed.
I'd rather punt this to 65 based on bug 1504980.
Attachment #9022459 -
Flags: approval-mozilla-beta? → approval-mozilla-beta-
Updated•7 years ago
|
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•