Bug 1497524 - Properly dispatch events when the NAC event target is not the root, and it gets reframed. r=smaug

We can wait for the button fix if you want, but it was easy enough to fix, I
think.

I think we could merge NativeAnonymousContentRemoved with the walk that
NotifyFrameRemoved does, since the content should still be in the tree when that
happens. If you want, I can do that as a followup.

Differential Revision: https://phabricator.services.mozilla.com/D10845

--HG--
extra : moz-landing-system : lando